--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "clsx": "^1.2.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "lucide-react": "^0.102.0",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.8.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
