--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,8 @@ jobs:
         with:
           node-version: "14.x"
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Run Jest
-        run: npm run test
+        run: yarn test
       - name: Run Cypress tests
-        run: npm run test:e2e
+        run: yarn test:e2e
