--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     }
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
-    "@heroicons/react": "^2.0.13",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "v1",
     "@next/font": "^13.0.4",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.9",
@@ -38,10 +38,13 @@
     "clsx": "^1.2.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "kbar": "^0.1.0-beta.39",
     "lucide-react": "^0.102.0",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-github-btn": "^1.4.0",
+    "react-icons": "^4.7.1",
     "tailwind-merge": "^1.8.0",
     "typescript": "4.9.3"
   },
