--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "v1",
+    "@heroicons/react": "^2.0.13",
     "@next/font": "^13.0.4",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.9",
