--- a/package.json
+++ b/package.json
@@ -29,29 +29,38 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
+    "@heroicons/react": "1.0.1",
     "@next/font": "^13.0.4",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "clsx": "^1.2.1",
+    "contentlayer": "^0.2.9",
+    "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "github-slugger": "^2.0.0",
     "lucide-react": "^0.102.0",
-    "next": "13.0.4",
+    "next": "13.1.1",
+    "next-contentlayer": "^0.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "^1.4.0",
     "react-icons": "^4.7.1",
+    "rehype-pretty-code": "^0.6.0",
+    "shiki": "^0.12.1",
     "tailwind-merge": "^1.8.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/github-slugger": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "autoprefixer": "^10.4.13",
     "cypress": "^11.1.0",
@@ -75,6 +84,9 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react-test-renderer": "^18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.2.4"
   }
 }
